src/test/resources/typeSystemTestModels/valid/annotations/AnnotationNameNotAsEnclosingType.java
package typeSystemTestModels.valid.annotations;

public class AnnotationNameNotAsEnclosingType {

  @interface Annotation{

  }
}
