src/test/resources/typeSystemTestModels/invalid/annotations/AnnotationTypeModifier.java
package resources.typeSystemTestModels.invalid.annotations;

public class AnnotationTypeModifier {

  final @interface getType{

  }
  native @interface getType1{

  }
  private @interface getType2{

  }
  protected  @interface getType3{

  }
  static @interface getType4{

  }
  synchronized @interface getType5{

  }
  transient @interface getType6{

  }
  volatile @interface getType7{

  }

}